fix: sonar warnings [DHIS2-18377]
Signed-off-by: Giuseppe Nespolino <g.nespolino@gmail.com>